--- a/src/e-order.css
+++ b/src/e-order.css
@@ -1,3 +1,55 @@
 body {
-    background-color: rgba(15, 14, 14, 0.658);
+    height: 100%;
+    background-color: #191b28;
+    color: beige;
 }
+
+#category-list {
+    display: flex;
+    justify-content: space-between;
+    padding: 10px;
+}
+
+#category-list button {
+    flex: 1;
+    margin-right: 10px;
+    padding: 20px 25px;
+}
+
+footer {
+    background-color: rgb(173, 175, 17);
+    color: black;
+    padding: 0px 1px;
+    margin: auto;
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+}
+
+#my-cart {
+    position: fixed;
+    top: 10px;
+    right: 10px;
+    border: 2px solid black;
+    border-radius: 25px;
+    background-color: #3ab813;
+    padding: 1px;
+}
+
+/* #my-cart {
+    position: fixed;
+    top: 10px;
+    right: 10px;
+    background-color: #ff0000;
+    padding: 10px;
+    display: none;
+}
+
+#my-cart.cart-open {
+    display: block;
+}
+
+#my-cart-button {
+    margin-bottom: 10px;
+} */
