--- a/src/e-order.css
+++ b/src/e-order.css
@@ -36,12 +36,12 @@ footer {
     border-radius: 15px;
     background-color: #3ab813;
     padding: 6px;
+    transition: transform 0.3s ease;
 }
 
 #my-cart:hover {
     cursor: pointer;
-    background-color: #191b28;
-    color: #3ab813; 
+    transform: scale(1.1);
 }
 
 #view-cart-button {
