--- a/src/e-order.css
+++ b/src/e-order.css
@@ -34,7 +34,7 @@ footer {
     right: 3%;
     border: 2px solid black;
     border-radius: 15px;
-    background-color: #3ab813;
+    background-color: #247d0e;
     padding: 6px;
     transition: transform 0.3s ease;
 }
@@ -90,6 +90,25 @@ footer {
     color: #e76f0a;
     transform: scale(1.05);
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+}
+
+#generateExcelBtn {
+    position: fixed;
+    bottom: 10%;
+    left: 43%;
+    border: 2px solid black;
+    border-radius: 10px;
+    width: 15%;
+    height: 3%;
+    padding: 6px;
+    /* background-image: linear-gradient(45deg, #B8D69E, #3D732F); */
+    background-image: linear-gradient(45deg, #4CAF50, #1B5E20, #000000);
+    transition: transform 0.3s ease;
+}
+
+#generateExcelBtn:hover {
+    cursor: pointer;
+    transform: scale(1.05);
 }
 
 .quantityBtnRemove, .quantityBtnAdd {
