--- a/src/e-order.css
+++ b/src/e-order.css
@@ -15,6 +15,16 @@ body {
     flex: 1;
     margin-right: 10px;
     padding: 20px 25px;
+    /* background-image: linear-gradient(45deg, #FFA500, #FFFF00); */
+    background-image: linear-gradient(45deg, #FF8000, #FFCC00);
+    background-size: 200% auto;
+    animation: colorRotation 8s linear infinite;
+}
+
+@keyframes colorRotation {
+    0% { background-position: left; }
+    50% { background-position: right; }
+    100% { background-position: left; }
 }
 
 footer {
@@ -57,17 +67,19 @@ footer {
     position: fixed;
     top: 5%;
     left: 50%;
+    width: 10%;
+    height: 3%;
     border: 2px solid black;
     border-radius: 8px;
     background-color: #00FFFF;
     transform: translate(-50%, -50%);
     background-image: linear-gradient(45deg, #e253e2, #28c9e8);
-    transition: background-color 0.3s ease;
+    transition: transform 0.3s ease;
 }
 
 #clear-cart-button:hover {
     cursor: pointer;
-    background-color: #B22222;
+    background-image: linear-gradient(45deg, #FF0000, #000000);
     box-shadow: 0 0 8px rgba(0, 0, 0, 0.3);
 }
 
@@ -99,7 +111,7 @@ footer {
     border: 2px solid black;
     border-radius: 10px;
     width: 15%;
-    height: 3%;
+    height: 3.5%;
     padding: 6px;
     /* background-image: linear-gradient(45deg, #B8D69E, #3D732F); */
     background-image: linear-gradient(45deg, #4CAF50, #1B5E20, #000000);
