--- a/src/e-order.css
+++ b/src/e-order.css
@@ -26,15 +26,10 @@ body {
     background-image: linear-gradient(45deg, #FF8000, #FFCC00);
     background-size: 200% auto;
     animation: colorRotation 8s linear infinite;
+    transition: box-shadow 0.7s ease;
     border: none;
     outline: none;
     box-shadow: 0px 20px 21px 4px rgba(0, 0, 0, 0.5);
-}
-
-#category-list button:focus {
-    outline: none;
-    box-shadow: 0 0 10px rgba(255, 255, 255, 0.8);
-    border-radius: 5px;
 }
 
 @keyframes colorRotation {
@@ -42,6 +37,25 @@ body {
     50% { background-position: right; }
     100% { background-position: left; }
 }
+
+#category-list button.selected {
+    outline: none;
+    box-shadow: 0 0 10px rgba(255, 255, 255, 0.8), 0 0 20px rgba(255, 165, 0, 0.8);
+    border-radius: 5px;
+    /* animation: pulse 2s ease-in-out infinite; */
+}
+
+/* @keyframes pulse {
+    0% {
+      box-shadow: 0 0 10px rgba(255, 255, 255, 0.8), 0 0 20px rgba(255, 165, 0, 0.8);
+    }
+    50% {
+      box-shadow: 0 0 12px rgba(255, 255, 255, 0.9), 0 0 24px rgba(255, 165, 0, 0.9);
+    }
+    100% {
+      box-shadow: 0 0 10px rgba(255, 255, 255, 0.8), 0 0 20px rgba(255, 165, 0, 0.8);
+    }
+} */
 
 footer {
     color: black;
