--- a/src/e-order.css
+++ b/src/e-order.css
@@ -42,20 +42,7 @@ body {
     outline: none;
     box-shadow: 0 0 10px rgba(255, 255, 255, 0.8), 0 0 20px rgba(255, 165, 0, 0.8);
     border-radius: 5px;
-    /* animation: pulse 2s ease-in-out infinite; */
 }
-
-/* @keyframes pulse {
-    0% {
-      box-shadow: 0 0 10px rgba(255, 255, 255, 0.8), 0 0 20px rgba(255, 165, 0, 0.8);
-    }
-    50% {
-      box-shadow: 0 0 12px rgba(255, 255, 255, 0.9), 0 0 24px rgba(255, 165, 0, 0.9);
-    }
-    100% {
-      box-shadow: 0 0 10px rgba(255, 255, 255, 0.8), 0 0 20px rgba(255, 165, 0, 0.8);
-    }
-} */
 
 footer {
     color: black;
@@ -151,6 +138,37 @@ footer {
 #generateExcelBtn:hover {
     cursor: pointer;
     transform: scale(1.05);
+}
+
+#activeProducts {
+    text-align: center;
+    position: fixed;
+    top: 4.9%;
+    left: 92%;
+    width: 2%;
+    height: 2%;
+    border: 2px solid black;
+    border-radius: 13px;
+    background-color: #00FFFF;
+    transform: translate(-50%, -50%);
+    background-image: linear-gradient(45deg, #e253e2, #28c9e8);
+    padding: 6px;
+    transition: transform 0.3s ease;
+}
+
+#activeProducts:hover {
+    cursor: pointer;
+    background-color: transparent;
+    transform: translate(-50%, -50%) scale(1.1);
+}
+
+#view-active-products {
+    border: none;
+    background-color: transparent;
+}
+
+#view-active-products {
+    cursor: pointer;
 }
 
 .quantityBtnRemove, .quantityBtnAdd {
