--- a/src/e-order.css
+++ b/src/e-order.css
@@ -126,6 +126,30 @@ footer {
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
 }
 
+#CustomFileNameInput {
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    text-align: center;
+    position: fixed;
+    bottom: 17%;
+    left: 45.2%;
+    width: 10%;
+    border: 2px solid black;
+    border-radius: 10px;
+    background-color: transparent;
+    background-image: linear-gradient(45deg, #347e37, #1B5E20, #9b9b9b);
+    background-clip: text;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    transition: box-shadow 0.3s, border-color 0.3s;
+    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.8);
+}
+
+#CustomFileNameInput:focus, #CustomFileNameInput:hover {
+    outline: none;
+    border-color: #347e37;
+    box-shadow: 0 0 5px rgba(52, 126, 55, 0.5);
+}
+
 #generateExcelBtn {
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     position: fixed;
