Custom checkboxes for active-products {Add}

--- a/src/e-order.css
+++ b/src/e-order.css
@@ -321,3 +321,42 @@ li {
     color: red;
     margin-right: 5px;
 }
+
+input[type="checkbox"] {
+    position: relative;
+    width: 50px;
+    height: 25px;
+    -webkit-appearance: none;
+    background-image: linear-gradient(45deg, #f84848, #FF6666);
+    outline: none;
+    border-radius: 25px;
+    transition: .3s;
+    box-shadow: inset 0 0 5px rgba(0,0,0,0.2);
+    bottom: -10px;
+    cursor: pointer;
+}
+
+input:checked[type="checkbox"] {
+    background-image: linear-gradient(45deg, #15aa15d7, #33cc33d5);
+}
+
+input[type="checkbox"]:before {
+    content: '';
+    position: absolute;
+    width: 25px;
+    height: 25px;
+    border-radius: 20px;
+    top: 0;
+    left: 0;
+    right: 0;
+    background: #000000f5;
+    transform: scale(1.1);
+    box-shadow: 0 2px 5px rgba(0,0,0,0.2);
+    transition: .3s;
+}
+
+input:checked[type="checkbox"]:before {
+    left: 25px;
+    background: #d6d3d3;
+    box-shadow: inset 0 0 5px rgba(0,0,0,0.2);
+}
