--- a/src/e-order.css
+++ b/src/e-order.css
@@ -32,6 +32,13 @@ body {
     border: none;
     outline: none;
     box-shadow: 0px 20px 21px 4px rgba(0, 0, 0, 0.5);
+    transition: transform 0.3s ease;
+}
+
+#category-list button:hover {
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    cursor: pointer;
+    transform: scale(1.03);
 }
 
 @keyframes colorRotation {
