--- a/src/e-order.css
+++ b/src/e-order.css
@@ -337,10 +337,11 @@ input[type="checkbox"] {
     background-image: linear-gradient(45deg, #f84848, #FF6666);
     outline: none;
     border-radius: 25px;
-    transition: .3s;
     box-shadow: inset 0 0 5px rgba(0,0,0,0.2);
     bottom: -10px;
     cursor: pointer;
+    transition: background-image 0.3s, box-shadow 0.3s !important;
+    transition: 0.3s;
 }
 
 input:checked[type="checkbox"] {
@@ -359,7 +360,6 @@ input[type="checkbox"]:before {
     background: #000000f5;
     transform: scale(1.1);
     box-shadow: 0 2px 5px rgba(0,0,0,0.2);
-    transition: .3s;
 }
 
 input:checked[type="checkbox"]:before {
