--- a/src/e-order.css
+++ b/src/e-order.css
@@ -66,7 +66,7 @@ footer {
 }
 
 #my-cart {
-    position: fixed;
+    position: absolute;
     top: 3%;
     right: 3%;
     border: 2px solid black;
@@ -135,7 +135,7 @@ footer {
 #clear-cart-button {
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     font-size: 15px;
-    position: fixed;
+    position: absolute;
     top: 5%;
     left: 50%;
     width: 10%;
@@ -155,7 +155,7 @@ footer {
 }
 
 #return-to-main {
-    position: fixed;
+    position: absolute;
     top: 3%;
     right: 3%;
     border: 2px solid black;
@@ -221,7 +221,7 @@ footer {
 
 #activeProducts {
     text-align: center;
-    position: fixed;
+    position: absolute;
     top: 4.8%;
     left: 90%;
     width: 5%;
@@ -248,7 +248,7 @@ footer {
 }
 
 #enable-all, #disable-all, #default-all {
-    position: fixed;
+    position: absolute;
     top: 10%;
     width: 2%;
     border: 2px solid black;
@@ -297,22 +297,22 @@ footer {
 
 .quantityBtnAdd {
     padding: 2px 5px;
-    position: fixed;
+    position: absolute;
     left: 44%;
 }
 
 .quantityBtnRemove {
     padding: 2px 7px;
-    position: fixed;
+    position: absolute;
     left: 37%;
 }
 
 .quantityCounter {
     padding: 3px 7px;
-    position: fixed;
+    position: absolute;
     left: 40.5%;
 }
-
+  
 h3 {
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     text-align: center;
