--- a/src/e-order.css
+++ b/src/e-order.css
@@ -12,6 +12,7 @@ body {
     display: inline;
 }
 
+/* Categories and buttons customization */
 #category-list {
     display: flex;
     justify-content: space-between;
@@ -41,6 +42,7 @@ body {
     transform: scale(1.03);
 }
 
+/* colorRotation animation (pulsive inside category boxes) */
 @keyframes colorRotation {
     0% { background-position: left; }
     50% { background-position: right; }
@@ -53,6 +55,7 @@ body {
     border-radius: 5px;
 }
 
+/* Footer customization */
 footer {
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     color: black;
@@ -65,6 +68,7 @@ footer {
     background-image: linear-gradient(45deg, #e253e2, #28c9e8);
 }
 
+/* My-Cart button customization */
 #my-cart {
     position: absolute;
     top: 3%;
@@ -90,7 +94,7 @@ footer {
     cursor: pointer;
 }
 
-/* Keyframes animation */
+/* CartShake animation */
 @keyframes CartShake {
     0% {
         transform: translateY(0);
@@ -132,6 +136,7 @@ footer {
     animation: CartShake 0.8s ease-in-out;
 }
 
+/* Vanish My-Cart button customization */
 #clear-cart-button {
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     font-size: 15px;
@@ -175,6 +180,7 @@ footer {
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
 }
 
+/* CustomFileNameInput customization */
 #CustomFileNameInput {
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     text-align: center;
@@ -199,6 +205,7 @@ footer {
     box-shadow: 0 0 5px rgba(52, 126, 55, 0.5);
 }
 
+/* GenerateExcel button customization */
 #generateExcelBtn {
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     position: fixed;
@@ -219,6 +226,7 @@ footer {
     transform: scale(1.05);
 }
 
+/* Active-Products page customization */
 #activeProducts {
     text-align: center;
     position: absolute;
@@ -247,6 +255,7 @@ footer {
     cursor: pointer;
 }
 
+/* Activate-Disable-BackToDefault buttons customization */
 #enable-all, #disable-all, #default-all {
     position: absolute;
     top: 10%;
@@ -278,6 +287,7 @@ footer {
     transform: scale(1.1);
 }
 
+/* Add-Remove from cart buttons and counter span customization */
 .quantityBtnRemove, .quantityBtnAdd {
     background-color: transparent;
     border: 2px solid #adaf11;
@@ -328,6 +338,7 @@ li {
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
+/* Order is ready popup customization */
 @keyframes popUpAnimation {
     0% {
         transform: translate(-50%, -50%) scale(0.2);
@@ -399,6 +410,7 @@ li {
     margin-right: 5px;
 }
 
+/* Checkbox customization */
 input[type="checkbox"] {
     position: relative;
     width: 50px;
@@ -438,6 +450,7 @@ input:checked[type="checkbox"]:before {
     box-shadow: inset 0 0 5px rgba(0,0,0,0.2);
 }
 
+/* Scrollbar customization */
 body::-webkit-scrollbar {
     width: 0.5em;
 }
