--- a/src/e-order.css
+++ b/src/e-order.css
@@ -226,6 +226,25 @@ footer {
     transform: scale(1.05);
 }
 
+/* GenerateList button customization */
+#generateListBtn {
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    position: absolute;
+    top: 12%;
+    right: 3%;
+    border: 2px solid black;
+    border-radius: 8px;
+    width: 15%;
+    height: 3%;
+    background-image: linear-gradient(45deg, #4CAF50, #1B5E20, #000000);
+    transition: 0.3s ease-in-out;
+}
+
+#generateListBtn:hover {
+    cursor: pointer;
+    transform: scale(1.1);
+}
+
 /* Active-Products page customization */
 #activeProducts {
     text-align: center;
@@ -258,27 +277,29 @@ footer {
 /* Activate-Disable-BackToDefault buttons customization */
 #enable-all, #disable-all, #default-all {
     position: absolute;
-    top: 10%;
-    width: 2%;
+    top: 20%;
+    width: 3%;
+    height: 4%;
     border: 2px solid black;
-    border-radius: 10px;
+    border-radius: 15px;
     font-size: 20px;
     background-color: #000000;
     box-shadow: 2px 2px 7px 1px rgba(0, 0, 0, 1);
+    transition: 0.3s ease-in-out;
 }
 
 #enable-all {
-    right: 15%;
+    right: 14%;
     color: green;
 }
 
 #disable-all {
-    right: 10%;
+    right: 9%;
     color: red;
 }
 
 #default-all {
-    right: 5%;
+    right: 4%;
     color: orange;
 }
 
